Added metadata template code

--- a/index.html
+++ b/index.html
@@ -23,6 +23,61 @@ limitations under the License.
   <title>Commerce</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <title>{{title}}</title>
+    <meta name="description" content="{{desc}}" />
+    {{^skipCanonical}}
+    <link rel="canonical" href="{{canonical}}">
+    {{/skipCanonical}}
+
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="{{title}}">
+    <meta itemprop="description" content="{{desc}}">
+    <meta itemprop="image" content="{{leader}}">
+    {{#categories}}{{#selected}}
+
+    <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "item": {
+        "@id": "{{host}}/#{{url}}",
+        "name": "{{name}}"
+      }
+    }{{#examples}}{{#selected}}, {
+      "@type": "ListItem",
+      "position": 2,
+      "item": {
+        "@id": "{{host}}{{url}}",
+        "name": "{{title}}"
+      }
+    }{{/selected}}{{/examples}}]
+  }
+</script>
+    {{/selected}}{{/categories}}
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@amphtml">
+    <meta name="twitter:creator" content="@sebabenz">
+    <meta name="twitter:title" content="{{title}}">
+    <meta name="twitter:description" content="{{desc}}">
+    <meta name="twitter:image" content="{{leader}}">
+    <meta name="twitter:image:alt" content="AMP by Example">
+
+    <!-- Open Graph data -->
+    <meta property="fb:app_id" content="254325784911610" />
+    <meta property="og:title" content="{{title}}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="{{leader}}" />
+    <meta property="og:url" content="{{canonical}}" />
+    <meta property="og:description" content="{{desc}}" />
+    <meta property="og:site_name" content="AMP by Example" />
+    <meta property="article:published_time" content="{{datePublished}}" />
+    <meta property="article:modified_time" content="{{dateModified}}" />
+
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
