--- a/index.html
+++ b/index.html
@@ -20,63 +20,32 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Commerce</title>
+  <title>manzip - 만들땐 만집</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <title>{{title}}</title>
-    <meta name="description" content="{{desc}}" />
-    {{^skipCanonical}}
-    <link rel="canonical" href="{{canonical}}">
-    {{/skipCanonical}}
+    <meta name="description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다." />
 
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="{{title}}">
-    <meta itemprop="description" content="{{desc}}">
-    <meta itemprop="image" content="{{leader}}">
-    {{#categories}}{{#selected}}
-
-    <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [{
-      "@type": "ListItem",
-      "position": 1,
-      "item": {
-        "@id": "{{host}}/#{{url}}",
-        "name": "{{name}}"
-      }
-    }{{#examples}}{{#selected}}, {
-      "@type": "ListItem",
-      "position": 2,
-      "item": {
-        "@id": "{{host}}{{url}}",
-        "name": "{{title}}"
-      }
-    }{{/selected}}{{/examples}}]
-  }
-</script>
-    {{/selected}}{{/categories}}
+    <meta itemprop="name" content="manzip - 만들땐 만집">
+    <meta itemprop="description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다.">
+    <meta itemprop="image" content="http://manzip.co.kr/img/logo.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@amphtml">
-    <meta name="twitter:creator" content="@sebabenz">
-    <meta name="twitter:title" content="{{title}}">
-    <meta name="twitter:description" content="{{desc}}">
-    <meta name="twitter:image" content="{{leader}}">
-    <meta name="twitter:image:alt" content="AMP by Example">
+    <meta name="twitter:creator" content="@manzip">
+    <meta name="twitter:title" content="manzip - 만들땐 만집">
+    <meta name="twitter:description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다.">
+    <meta name="twitter:image" content="http://manzip.co.kr/img/logo.png">
+    <meta name="twitter:image:alt" content="manzip">
 
     <!-- Open Graph data -->
     <meta property="fb:app_id" content="254325784911610" />
-    <meta property="og:title" content="{{title}}" />
-    <meta property="og:type" content="article" />
-    <meta property="og:image" content="{{leader}}" />
-    <meta property="og:url" content="{{canonical}}" />
-    <meta property="og:description" content="{{desc}}" />
-    <meta property="og:site_name" content="AMP by Example" />
-    <meta property="article:published_time" content="{{datePublished}}" />
-    <meta property="article:modified_time" content="{{dateModified}}" />
+    <meta property="og:title" content="manzip - 만들땐 만집" />
+    <meta property="og:image" content="http://manzip.co.kr/img/logo.png" />
+    <meta property="og:url" content="http://manzip.co.kr" />
+    <meta property="og:description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다." />
+    <meta property="og:site_name" content="manzip" />
 
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
