--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ limitations under the License.
   <title>manzip - 만들땐 만집</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다." />
+    <meta name="description" content="메이커 정보 공유 플래폼(platform for sharing maker information)" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="manzip - 만들땐 만집">
-    <meta itemprop="description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다.">
+    <meta itemprop="description" content="메이커 정보 공유 플래폼(platform for sharing maker information)">
     <meta itemprop="image" content="http://manzip.co.kr/img/logo.png">
 
     <!-- Twitter Card data -->
@@ -35,7 +35,7 @@ limitations under the License.
     <meta name="twitter:site" content="@amphtml">
     <meta name="twitter:creator" content="@manzip">
     <meta name="twitter:title" content="manzip - 만들땐 만집">
-    <meta name="twitter:description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다.">
+    <meta name="twitter:description" content="메이커 정보 공유 플래폼(platform for sharing maker information)">
     <meta name="twitter:image" content="http://manzip.co.kr/img/logo.png">
     <meta name="twitter:image:alt" content="manzip">
 
@@ -44,7 +44,7 @@ limitations under the License.
     <meta property="og:title" content="manzip - 만들땐 만집" />
     <meta property="og:image" content="http://manzip.co.kr/img/logo.png" />
     <meta property="og:url" content="http://manzip.co.kr" />
-    <meta property="og:description" content="manzip은 전자, 목공, 수공예 전 분야에 이르는 메이커와 관련된 정보를 나누는 플래폼입니다." />
+    <meta property="og:description" content="메이커 정보 공유 플래폼(platform for sharing maker information)" />
     <meta property="og:site_name" content="manzip" />
 
 
