--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>manzip - 만들땐 만집</title>
-  <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
+  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="description" content="메이커 정보 공유 플래폼(platform for sharing maker information)" />
 
