--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@ limitations under the License.
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2 absolute top-0 pr0 mr2 mt2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" class="block"><path fill="none" d="M0 0h24v24H0z"></path><path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg>
     </div>
       <a href="#" class="text-decoration-none inline-block mx-auto ampstart-headerbar-home-link mb1 md-mb0 ">
-        <amp-img src="./img/e-commerce/logo.png" width="96" height="27" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/manzip_facebook_profile_1_clayandwhite.png" width="35" height="35" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/manzip_facebook_profile_2_clayandwhite.png" width="35" height="35" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/manzip_facebook_profile_3_blackandwhite.png" width="35" height="35" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/manzip_facebook_profile_4_blackandwhite.png" width="35" height="35" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/manzip_facebook_profile_5_charactor.png" width="35" height="35" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
       </a>
     <!--
       TODO: currently "fixeditems" is an array, therefore it's not possible to
@@ -113,7 +117,19 @@ limitations under the License.
     <ul class="list-reset m0 p0 ampstart-label">
         <li>
           <a href="#" class="text-decoration-none block 22">
-          <amp-img src="./img/e-commerce/logo-nav.png" width="279" height="175" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+          <amp-img src="./img/manzip_facebook_profile_1_clayandwhite.png" width="279" height="279" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+            <div placeholder="" class="commerce-loader"></div>
+          </amp-img>
+          <amp-img src="./img/manzip_facebook_profile_2_clayandwhite.png" width="279" height="279" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+            <div placeholder="" class="commerce-loader"></div>
+          </amp-img>
+          <amp-img src="./img/manzip_facebook_profile_3_blackandwhite.png" width="279" height="279" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+            <div placeholder="" class="commerce-loader"></div>
+          </amp-img>
+          <amp-img src="./img/manzip_facebook_profile_4_blackandwhite.png" width="279" height="279" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+            <div placeholder="" class="commerce-loader"></div>
+          </amp-img>
+          <amp-img src="./img/manzip_facebook_profile_5_charactor.png" width="279" height="279" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
             <div placeholder="" class="commerce-loader"></div>
           </amp-img>
           </a>
@@ -131,7 +147,7 @@ limitations under the License.
     <h3 class="h7 block pt3">follow us</h3>
 <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
     <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
+        <a href="https://www.facebook.com/manzipzip-1530447257042415" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
     </li>
 <!--
     <li>
@@ -158,15 +174,15 @@ limitations under the License.
 
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="#" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-01.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_1_clayandwhite.png" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-01.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_1_clayandwhite.png" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
+<!--
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">The Essentials</h2>
       <p class="commerce-hero-content-body">These are the key frames, clothing and accessories every rider needs.</p>
-<!--
         <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">shop</div>
 -->
     </div>
@@ -192,15 +208,15 @@ limitations under the License.
 -->
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="#" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-03.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_2_mix.png" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-03.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_2_mix.png" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-secondary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
+<!--
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">Sprocket Set 3 Series</h2>
       <p class="commerce-hero-content-body">The steel-framed complete bike that combines peerless performance with timeless style.</p>
-<!--
         <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">shop</div>
 -->
     </div>
@@ -270,7 +286,7 @@ limitations under the License.
     <h3 class="h7 block pt3">follow us</h3>
 <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
     <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
+        <a href="https://www.facebook.com/manzipzip-1530447257042415" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
     </li>
 <!--
     <li>
