Updated css:img media query

--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@ limitations under the License.
 
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="#" class="text-decoration-none block">
+<!--
       <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_1_clayandwhite.png" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_1_clayandwhite.png" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+-->
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_1_clayandwhite.png" width="2560" height="800" layout="responsive" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
@@ -208,9 +210,11 @@ limitations under the License.
 -->
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="#" class="text-decoration-none block">
+<!--
       <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_2_mix.png" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_2_mix.png" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+-->
+      <amp-img class="commerce-hero-image" src="./img/manzip_facebook_cover_2_mix.png" width="2560" height="800" layout="responsive" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-secondary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
